# autorecruit-adk

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
data/processed/: candidates.csv
docs/: architecture.md  concepts_demonstrated.md  evaluation_report.md
scripts/: run_demo.py  web_demo.py
src/autorecruit/: config.py
src/autorecruit/agents/: candidate_screening_agent.py  candidate_sourcing_agent.py  job_intake_agent.py  orchestrator_agent.py  outreach_agent.py
src/autorecruit/app/: run_recruiting_session.py
src/autorecruit/evaluation/: eval_metrics.py
src/autorecruit/memory/: session_memory.py
src/autorecruit/tools/: candidate_search_tool.py  email_template_tool.py  pipeline_logger_tool.py
tests/: test_eval_metrics.py
